Bundle subset of Java and switch to appimagetool